<resources>
    <string name="app_name">a1 test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">BMI</string>
    <string name="title_notifications">Zodiac</string>
    <string name="my_name">Fong Yiu Fai, 20058747a</string>
    <string name="Bmi_textMSG">Please input your information at home page</string>
    <string name="Result">Result</string>
    <string name="what_is_zodica">What is this zodica</string>
    <string name="Personality">Personality</string>
    <string name="good_match">Good match :</string>
    <string name="conflicts">Conflict :</string>
    <string name="status_underweight"> &lt;big&gt;  &lt;b> Here are some healthy ways to gain weight when you are &lt;i&gt;Underweight&lt;/i&gt; &lt;/b> \n  &lt;ul&gt;  &lt;li&gt;Eat more frequently&lt;/li&gt;   &lt;li&gt;Choose nutrient-rich foods&lt;/li&gt;   &lt;li&gt;Try smoothies and shakes&lt;/li&gt;   &lt;li&gt;Exercise&lt;/li&gt;   &lt;li&gt;Watch when you drink&lt;/li&gt;   &lt;/ui&gt; &lt;/big&gt; </string>
    <string name="status_normalRange">&lt;big&gt;  &lt;b> Here are some healthy ways when you are &lt;i&gt;Normal range&lt;/i&gt; &lt;/b> \n    &lt;li&gt;Your body is healthy &lt;/li&gt; &lt;li&gt; Keep doing exercise&lt;/li&gt;    &lt;/big&gt;</string>
    <string name="status_overweight">&lt;big&gt;  &lt;b> Here are some healthy ways to loss weight when you are &lt;i&gt;Overweight&lt;/i&gt; &lt;/b> \n    &lt;ul&gt;  &lt;li&gt;Eat a balanced calorie-controlled diet&lt;/li&gt;   &lt;li&gt;join a local weight loss group&lt;/li&gt;   &lt;li&gt;Try smoothies and shakes&lt;/li&gt;   &lt;li&gt;Exercise&lt;/li&gt;   &lt;li&gt;Take up activities such as fast walking, jogging, swimming&lt;/li&gt;    &lt;li&gt;eat slowly and avoid situations where you know you could be tempted to overeat  &lt;/li&gt; &lt;/ui&gt;
      &lt;/big&gt;</string>
    <string name="status_o1">&lt;big&gt;  &lt;b> Here are some healthy ways to loss weight when you are &lt;i&gt;Obese class 1&lt;/i&gt; &lt;/b> \n  &lt;ul&gt;  &lt;li&gt;Eat a balanced calorie-controlled diet&lt;/li&gt;   &lt;li&gt;join a local weight loss group&lt;/li&gt;   &lt;li&gt;Try smoothies and shakes&lt;/li&gt;   &lt;li&gt;Exercise&lt;/li&gt;   &lt;li&gt;Take up activities such as fast walking, jogging, swimming&lt;/li&gt;    &lt;li&gt;eat slowly and avoid situations where you know you could be tempted to overeat  &lt;/li&gt;   &lt;li&gt;  Ask advice from nutritionist&lt;/li&gt;  &lt;/ui&gt;        &lt;/big&gt;</string>
    <string name="status_o2">&lt;big&gt;  &lt;b> Here are some healthy ways to loss weight when you are &lt;i&gt;Obese class 2&lt;/i&gt; &lt;/b> \n   &lt;ul&gt;  &lt;li&gt;Eat a balanced calorie-controlled diet&lt;/li&gt;   &lt;li&gt;join a local weight loss group&lt;/li&gt;   &lt;li&gt;Try smoothies and shakes&lt;/li&gt;   &lt;li&gt;Exercise&lt;/li&gt;   &lt;li&gt;Take up activities such as fast walking, jogging, swimming&lt;/li&gt;    &lt;li&gt;eat slowly and avoid situations where you know you could be tempted to overeat  &lt;/li&gt;   &lt;li&gt;  Ask advice from nutritionist&lt;/li&gt; &lt;li&gt; Must change your lifestyle  &lt;/li&gt; &lt;/ui&gt;       &lt;/big&gt;</string>
    <string name="status_o3">&lt;big&gt;  &lt;b> Here are some healthy ways to loss weight when you are &lt;i&gt;Obese class 3&lt;/i&gt; &lt;/b> \n    &lt;ul&gt;  &lt;li&gt;Eat a balanced calorie-controlled diet&lt;/li&gt;   &lt;li&gt;join a local weight loss group&lt;/li&gt;   &lt;li&gt;Try smoothies and shakes&lt;/li&gt;   &lt;li&gt;Exercise&lt;/li&gt;   &lt;li&gt;Take up activities such as fast walking, jogging, swimming&lt;/li&gt;    &lt;li&gt;eat slowly and avoid situations where you know you could be tempted to overeat  &lt;/li&gt;   &lt;li&gt;  Ask advice from nutritionist&lt;/li&gt; &lt;li&gt; Must change your lifestyle  &lt;/li&gt; &lt;li&gt; weight loss surgery may be recommended &lt;/li&gt; &lt;/ui&gt;      &lt;/big&gt;</string>
    <string name="sagittarius_inf">     &lt;big&gt; &lt;t1&gt;  What is this zodiac  &lt;/t1&gt; \n  In astrology, Sagittarius is the ninth sign of the zodiac, considered as governing the period from about November 22 to about December 21. It is represented either by a centaur shooting a bow and arrow or by an arrow drawn across a bow. The identification of Sagittarius as a mounted archer was made by the Babylonians as early as the 11th century BCE. &gt;&lt;/big&gt;           </string>
    <string name="aries_inf"> In astrology, Aries is the first sign of the zodiac, considered as governing the period from about March 21 to about April 19. Its representation as a ram is identified with the Egyptian god Amon and, in Greek mythology, with the ram with the golden fleece, on the back of which Phrixus, the son of King Athamas, safely fled Thessaly to Colchis, where he sacrificed the ram to Zeus, who placed it in the heavens as the constellation. The ram’s golden fleece was recovered by Jason, leader of the Argonauts. </string>
    <string name="taurus_inf"> In astrology, Taurus is the second sign of the zodiac, considered as governing that portion of the year from about April 20 to about May 20. Its representation as a bull is related to the Greek myth of Zeus, who assumed the form of a bull to abduct Europa.</string>
    <string name="gemini_inf"> In astrology, Gemini is the third sign of the zodiac, considered as governing the period from about May 21 to about June 21. It is represented by a set of twins (or in Egyptian astrology by a pair of goats and in Arabian astrology by a pair of peacocks). In addition to their identification as Castor and Pollux, the twins have also been related to other celebrated pairs, such as the younger and older Horus or Romulus and Remus. </string>
    <string name="cancer_inf">In astrology, Cancer is the fourth sign of the zodiac, considered as governing the period from about June 22 to about July 22. Its representation as a crab (or lobster or crayfish) is related to the crab in Greek mythology that pinched Heracles while he was fighting the Lernaean hydra. Crushed by Heracles, the crab was rewarded by Heracles’ enemy, Hera, by being placed in the heavens.</string>
    <string name="leo_inf">     In astrology, Leo is the fifth sign of the zodiac, considered as governing the period from about July 23 to about August 22. Its representation as a lion is usually linked with the Nemean lion slain by Heracles (Hercules).    </string>
    <string name="virgo_inf"> In astrology, Virgo is the sixth sign of the zodiac, considered as governing the period from about August 23 to about September 22. It is represented as a young maiden carrying a sheaf of wheat. She is variously identified as a fertility goddess (the Babylonian and Assyrian Ishtar, among others) or the harvest maiden (the Greek Persephone and others). </string>
    <string name="libra_inf">In astrology, Libra is the seventh sign of the zodiac, considered as governing the period from about September 22 to about October 23. It is represented by a woman (sometimes identified with Astraea, the Roman goddess of justice), holding a balance scale or by the balance alone. </string>
    <string name="scorpio_inf">  In astrology, Scorpius (or Scorpio) is the eighth sign of the zodiac, considered as governing the period from about October 24 to about November 21. Its representation as a scorpion is related to the Greek legend of the scorpion that stung Orion to death (said to be why Orion sets as Scorpius rises in the sky). Another Greek myth relates that a scorpion caused the horses of the Sun to bolt when they were being driven for a day by the inexperienced youth Phaeton. </string>
    <string name="capricornus_inf"> In astrology, Capricornus (also called Capricorn) is the 10th sign of the zodiac, considered as governing the period from about December 22 to about January 19. One explanation of the fishtail with which the goat is often represented is found in the Greek myth of Pan, who, to avoid the monster Typhon, jumped into the water just as he was changing into animal shape. The half above water assumed the shape of a goat while the lower half, the tail, assumed the shape of a fish.</string>
    <string name="aquarius_inf"> In astrology, Aquarius is the 11th sign of the zodiac, considered as governing the period from about January 20 to about February 18. Its representation as a man pouring a stream of water out of a jug came about, it has been suggested, because in ancient times the rising of Aquarius coincided in the Middle East with a period of floods and rain.</string>
    <string name="pisces_inf"> In astrology, Pisces is the 12th sign of the zodiac, considered as governing the period from about February 19 to about March 20. Its representation as two fish tied together is usually related to the Greek myth of Aphrodite and Eros, who jumped into a river to escape the monster Typhon and changed into fish, or, alternatively, the two fish that carried them to safety. </string>
    <string name="sagittarius_p"> Sagittarius natives are loyal, smart, assertive, and compassionate personality! They are one-of-a-kind, talented, and have impeccable discernment. They are a fantastic, caring personality type because of their blend of autonomy, intellect, and empathy </string>
    <string name="aries_p"> Ariens are known for their whirling, upbeat, and extroverted personalities. They are known to be among the most energetic, with large diameters of energy and often quick lifestyle choices. Their ferocious commitment to succeed can sometimes lead to arrogance and insensitivity.  </string>
    <string name="taurus_p"> Taurus natives are known for their passion, dependability, and elegance, and they are sometimes regarded as the most attractive of the zodiac children. They generate satisfaction and respect in people around them because they are pleasant, loving, and honest. Taurus natives have a strong desire for social and corporate stability. </string>
    <string name="gemini_p"> The Gemini personality is a lot of fun, but it does have flaws, just like any other sign. Geminis are flexible, extroverted, and clever, and thereis never a boring moment while they are around. Their flaws include indecisiveness, impulsivity, unreliability, and nosines </string>
    <string name="cancer_p"> Cancerians are among the most difficult zodiacs to understand. They frequently display a stony, brittle, even impervious veneer to the world, and might look Taken away, cold, and restrained, just like the crab that symbolises their sign. </string>
    <string name="leo_p"> Leos are the natural leaders of the zodiac, as magnificent and striking as the Lion that embodies their sign. Leos are radiantly joyful, liberal with their appeal and endowments. They are fiercely proud and confident. They love and live life to the fullest rather than being in charge at home, work, and play. Leos are very loving, theatrical, and creative. </string>
    <string name="virgo_p"> Virgos are humble, self-effacing, industrious, and practical, but under the surface, they are frequently natural, kind, and sympathetic, as befits their zodiac sign. Virgoans are methodical and quick thinkers, yet they have so much mental energy that they are frequently stressed and tense. </string>
    <string name="libra_p"> Librans are extroverted, cosy, and friendly people. Librans, like the Scales that symbolise the sign, are often concerned with attaining balance, harmony, peace, and justice in the world. With their vast stores of charm, intelligence, frankness, persuasion, and seamless connectivity, they are well-equipped to do so. </string>
</resources>