<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.ZodiacFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:src="@drawable/ic_baseline_person_24" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:gravity="center|center_horizontal"
                android:text="@string/Bmi_textMSG"
                android:textAlignment="center"
                android:textSize="16dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:src="@drawable/gender_icon" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:gravity="center|center_horizontal"
                android:text="@string/Bmi_textMSG"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:src="@drawable/calender_icon" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:gravity="center|center_horizontal"
                android:text="@string/Bmi_textMSG"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:src="@drawable/zodiac" />

            <TextView
                android:id="@+id/tv_zodiac"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="2"
                android:gravity="center|center_horizontal"
                android:text="@string/Bmi_textMSG"
                android:textAlignment="center"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/zodiac_img"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/astrology_sign" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/what_is_zodica"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_inf"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:text="@string/Bmi_textMSG"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Personality"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_p"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:text="@string/Bmi_textMSG"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/textVi"
                android:layout_width="108dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/good_match"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/good1"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@android:drawable/screen_background_light" />

            <ImageView
                android:id="@+id/good2"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@android:drawable/screen_background_light" />

            <ImageView
                android:id="@+id/good3"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@android:drawable/screen_background_light" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/textVi231"
                android:layout_width="108dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/conflicts"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/bad1"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@android:drawable/screen_background_light" />

            <ImageView
                android:id="@+id/bad2"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@android:drawable/screen_background_light" />

            <ImageView
                android:id="@+id/bad3"
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@android:drawable/screen_background_light" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="80dp" />


    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>